Android Compatibility executed